# keyless-evaluator

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  adapter.py  cli.py  docker-compose.yml  example_results.json  main.py  prompts.py  pyproject.toml  requirements.txt  uv.toml  vercel.json
.agents/skills/api-design/: SKILL.md
.agents/skills/business-requirements/: SKILL.md
.agents/skills/keyless-evaluator/: SKILL.md
.agents/skills/performance/: SKILL.md
.agents/skills/security/: SKILL.md
.claude/skills/keyless-evaluator/: SKILL.md
api/: adapter.py  cache.py  cli.py  evaluators.py  models.py  parser.py  presets.py  prompts.py  renderer.py  server.py
docker/: README.md  entrypoint.sh
keyless_evaluator/: __init__.py  adapter.py  cli.py  evaluators.py  models.py  parser.py  prompts.py  renderer.py  server.py
oracle_search_evaluator/: __init__.py  cli.py  evaluators.py  models.py  parser.py  prompts.py  renderer.py  server.py
support/: restart.sh
tests/: mock_jobs_10.json  test_parser.py
