[project]
name = "keyless-evaluator"
version = "0.1.0"
description = "Evaluate search results using LLMs — no browser required for API providers"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx[http2]>=0.27.0",
    "jinja2>=3.1.0",
    "anyio>=4.0.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "playwright>=1.58.0",
]

[project.scripts]
keyless-eval = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "adapter.py",
    "cli.py",
    "evaluators.py",
    "models.py",
    "parser.py",
    "prompts.py",
    "renderer.py",
    "server.py",
]

[tool.uv]
python = "3.13"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
