[project]
name = "keyless-evaluator"
version = "0.1.0"
description = "Evaluate search results using LLMs — no browser required for API providers"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx[http2]>=0.27.0",
    "jinja2>=3.1.0",
    "anyio>=4.0.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "playwright>=1.58.0",
    "json-repair>=0.58.6",
    "redis>=7.3.0",
]

[project.scripts]
keyless-eval = "cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["adapter", "cache", "cli", "evaluators", "models", "parser", "prompts", "renderer", "server"]

[tool.setuptools.package-dir]
"" = "api"

[tool.uv]
python = "3.13"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["api"]
asyncio_mode = "strict"
